# nuruja

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  nginx.conf  pyproject.toml  requirements.txt  setup.py  wsgi.py
configs/: __init__.py
migrations/versions/: 9489b9380176_removed_category_and_shelf_tables.py  e5bcdcd9de64_.py  fdd0e107ae31_.py
nuruja/: __init__.py  commands.py  extensions.py
nuruja/controllers/: analytics.py  balances.py  books.py  borrowing.py  members.py  schemas.py  search.py  transactions.py  users.py
nuruja/models/: __init__.py  mixins.py
tests/: conftest.py  test_books.py  test_members.py  test_transactions.py
